<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="bacon_reader">Bacon Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="launch_spotify">This button will launch my spotify streamer</string>
    <string name="launch_scores">This button will launch my scores app</string>
    <string name="launch_library">This button will launch my library app</string>
    <string name="launch_build_it_bigger">This button will launch my build it bigger app</string>
    <string name="launch_bacon_reader">This button will launch my bacon reader</string>
    <string name="launch_capstone">This button will launch my capstone app</string>
</resources>
